--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.6.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "serve": "^14.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
