--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
-    "serve": "^14.1.2"
+    "react-timer-hook": "^3.0.5",
+    "serve": "^14.1.2",
+    "typewriter-effect": "^2.19.0"
   },
   "scripts": {
     "start": "react-scripts start",
