--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.4",
+    "@mui/styles": "^5.11.2",
     "@react-hook/window-size": "^3.1.1",
     "cra-template": "1.2.0",
     "react": "^18.2.0",
