--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/material": "^5.11.4",
     "@mui/styles": "^5.11.2",
     "@react-hook/window-size": "^3.1.1",
+    "clsx": "^1.2.1",
     "cra-template": "1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
