--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "@mui/material": "^5.11.4",
     "@mui/styles": "^5.11.2",
     "@react-hook/window-size": "^3.1.1",
+    "@react-three/drei": "^9.56.1",
+    "@react-three/fiber": "^8.10.1",
+    "@types/three": "^0.148.1",
     "clsx": "^1.2.1",
     "cra-template": "1.2.0",
+    "drei": "^2.2.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
-    "serve": "^14.1.2"
+    "serve": "^14.1.2",
+    "three": "^0.148.0"
   },
   "scripts": {
     "start": "react-scripts start",
